ml-models-kserve-configs/inference/llama3-openbiollm/openbiollm-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: openbiollm-gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - openbiollm.dev.curieo.ai
    port:
      name: http
      number: 80
      protocol: HTTP
